#21. Gap fixed for mobile screen for social icons.

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -4,7 +4,7 @@
 
 .navbar {
   background-image: linear-gradient(to right, rgba(29, 203, 251, 0), rgba(3,138,255,1));
-  position: relative;
+  // position: relative;
 }
 
 .header {
@@ -146,12 +146,23 @@
     width: 700px;
   }
 
-
   #about {
     img {
     max-width: 60%;
     }
   }
+
+  .dropdown-menu {
+    margin-bottom: 10px;
+  }
 }
 
-
+@media (min-width: 992px) and (max-width: 1200px) {
+  .fa-stack {
+    font-size: 10px;
+    justify-content: space-between;
+    display: inline-block;
+  }
+  
+  
+}
